<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nazvanie" />

    <EditText
        android:id="@+id/editTextCalories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/kallorii" />

    <Button
        android:id="@+id/buttonSelectTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time" />

    <TextView
        android:id="@+id/textViewSelectedTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:hint="@string/selecttime" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</LinearLayout>
